tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__ADarkPathtoTrave-AAAAAAAAAAAAAAAAAAAGcw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1651,
  "prerequisites": [
    1650
  ],
  "properties": {
    "auto_claim": false,
    "desc": "...but a path laden with power beyond imagination. Behold mortal, and be terrified!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "A Dark Path to Travel Down...",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1650
  ],
  "rewards": [],
  "tasks": []
}
