tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__AttunedStone-AAAAAAAAAAAAAAAAAAAGIA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1568,
  "prerequisites": [
    1558,
    3226
  ],
  "properties": {
    "auto_claim": false,
    "desc": "An attuned stone is a Mana Diamond that has been further infused with natural magic in a fiery medium. Attuned stones can be used to link non-magical devices to the magical currents present in the world, and are one of the main ingredients in crafting distilleries, kettles, altar foci and poppet shelves.\n\nThe other main use of attuned stones is to act as a portable power source for circle magic rites, when a nearby altar is not available. To act in such a way, the attuned stone must first be charged with a Rite of Charging.\n\n[note]If you haven't yet obtained a Mana Diamond, checkout the Flower Power tab for more information![/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Attuned Stone",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1558,
    3226
  ],
  "rewards": [],
  "tasks": []
}
