tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__LooktotheEdges-AAAAAAAAAAAAAAAAAAAAGw==__BetterNightmareP-AAAAAAAAAAAAAAAAAAAGKw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1579,
  "prerequisites": [
    1595
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Charm of Fanciful Thinking is the only way to protect oneself from some of the worst effects a nightmare can throw at you. It just needs to be in a player's inventory for it to function.\n\nA Charm of Fanciful Thinking is crafted using Sticks and Fanciful Thread.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Better Nightmare Protection",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    1595
  ],
  "rewards": [],
  "tasks": []
}
